--- a/src/app/contact-forms/contact-forms.component.html
+++ b/src/app/contact-forms/contact-forms.component.html
@@ -13,6 +13,6 @@
     
     <input type="text" id="phn" name="phn" [(ngModel)]="getcontact.Phone">
     <br/>
-    <button type="button">Add</button>
+    <button type="button" (click)=addContact()>Add</button>
 </form>
 </div>
